--- a/src/main/resources/statis/courseDesign/login.html
+++ b/src/main/resources/statis/courseDesign/login.html
@@ -16,6 +16,7 @@
             overflow: hidden;
             margin: 0;
             padding: 0;
+            background: url(background.png) no-repeat 0px 0px;
             background-repeat: no-repeat;
             background-size: 100% 100%;
             -moz-background-size: 100% 100%;
@@ -81,7 +82,7 @@
     <div id="loginDiv">
         <form action="" id="form">
             <h1 style="text-align: center;color: aliceblue;">立即登录</h1>
-            <p>账号:<input id="username" type="text">
+            <p>邮箱:<input id="username" type="text">
                     <br>
                     <span id="username_err" style="display: none">用户名已经存在</span>
             </p>
@@ -92,24 +93,51 @@
             <p style="text-align: center;color: darkgray;"><a href="#">忘记密码?</a></p>
             <div style="text-align: center;margin-top: 30px;">
                 <input type="button" id="btn" class="button" value="登录" onclick="login_click()">
-                <input type="button" class="button" value="刷新"
-                       onclick="window.parent.frames.item('bottom').location.reload()">
+                <input type="button" class="button" value="刷新" οnclick="window.parent.frames.item('bottom').location.reload()">
             </div>
         </form>
         <script src="js/jquery.js"></script>
         <script>
-        var btn = document.getElementById("btn");
-        var usernameInput= document.getElementById("username");
-        var passwordInput= document.getElementById("password");
-        btn.onclick=function (){
-            var username = usernameInput.value;
-            var passoword = passwordInput.value;
-            $.post("http://127.0.0.1:8080/account/login",{username:username,passoword:passoword},function (data){
-                alert(data.data);
-                if(data.error===0){
-                    location.href='adminview.html'
+               var btn=document.getElementById("btn");
+               var usernameInput=document.getElementById("username");
+               var passwordInput=document.getElementById("password");
+               btn.onclick=function () {
+                   var username = usernameInput.value;
+                   var password = passwordInput.value;
+                   $.post("http://127.0.0.1:8080/account/login", {username: username, password: password}, function (data) {
+                       alter(data.data)
+                       if (data.error === 0) {
+                       }
+                       location.herf = './adminview.html'
+                   },"json")
+               }
+
+            //获取注册时存储在localStorage中的值
+            var sex=localStorage.getItem("sex");
+            var password=localStorage.getItem("password");
+            var email=localStorage.getItem("email");
+            var username=localStorage.getItem("username");
+
+            //判断登录是否成功
+            function login_click(){
+                //获取用户输入的信息
+                var email1=document.getElementById("email").value;
+                var password1=document.getElementById("password").value;
+
+                //判断输入的信息和注册的信息是否一致
+                if(email1!='' && password1!=''){
+                    if (email1==email && password==password1){
+                        window.location.href="My_Album.html";
+                    }
+                    else{
+                        alert("邮箱或密码错误，请重新输入！");
+                    }
                 }
-            },"json")
+                else{
+                    alert("邮箱或密码不能为空！");
+                }
+                
+            }
         }
         </script>
     </div>
