--- a/src/main/resources/statis/courseDesign/adminview.html
+++ b/src/main/resources/statis/courseDesign/adminview.html
@@ -129,27 +129,27 @@
             menuList: [
                   {
                     id: '2',
-                    name: '学生信息查询',
-                    url: 'page/information.html',
-                    icon: 'icon-member'
+                    name: '学生管理',
+                    url: 'page/studentadmin.html',
+                    icon: 'icon-category'
                   },
                   {
                     id: '3',
-                    name: '学生成绩查询',
-                    url: 'page/category/list.html',
+                    name: '学院管理',
+                    url: 'page/departmentadmin.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '4',
-                    name: '学生选课查询',
-                    url: 'page/food/list.html',
+                    name: '课程管理',
+                    url: 'page/courseadmin.html',
                     icon: 'icon-category'
                   },
-                
+
               //   ],
               // },
             ],
-            iframeUrl: 'page/information.html',
+            iframeUrl: 'page/studentadmin.html',
             headTitle: '学生信息查询',
             goBackFlag: false,
             loading: true,
