--- a/src/main/resources/statis/courseDesign/login.html
+++ b/src/main/resources/statis/courseDesign/login.html
@@ -82,7 +82,7 @@
     <div id="loginDiv">
         <form action="" id="form">
             <h1 style="text-align: center;color: aliceblue;">立即登录</h1>
-            <p>邮箱:<input id="username" type="text">
+            <p>账号:<input id="username" type="text">
                     <br>
                     <span id="username_err" style="display: none">用户名已经存在</span>
             </p>
@@ -96,49 +96,27 @@
                 <input type="button" class="button" value="刷新" οnclick="window.parent.frames.item('bottom').location.reload()">
             </div>
         </form>
-        <script src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/jquery.js"></script>
         <script>
-               var btn=document.getElementById("btn");
-               var usernameInput=document.getElementById("username");
-               var passwordInput=document.getElementById("password");
-               btn.onclick=function () {
-                   var username = usernameInput.value;
-                   var password = passwordInput.value;
-                   $.post("http://127.0.0.1:8080/account/login", {username: username, password: password}, function (data) {
-                       alter(data.data)
-                       if (data.error === 0) {
-                       }
-                       location.herf = './adminview.html'
-                   },"json")
-               }
+            var username1=document.getElementById("username").value;
+            var password1=document.getElementById("password").value;
+            axios.post('/account/login', {
+                username: username1,
+                password: password1
+            })
+                .then(function(response) {
+                    // 处理返回的 JSON 数据
+                    console.log(response.data);
+
+
+                })
+                .catch(function (error){
+                    //处理错误
+                    console.log(error)
+                })
 
             //获取注册时存储在localStorage中的值
-            var sex=localStorage.getItem("sex");
-            var password=localStorage.getItem("password");
-            var email=localStorage.getItem("email");
-            var username=localStorage.getItem("username");
 
-            //判断登录是否成功
-            function login_click(){
-                //获取用户输入的信息
-                var email1=document.getElementById("email").value;
-                var password1=document.getElementById("password").value;
-
-                //判断输入的信息和注册的信息是否一致
-                if(email1!='' && password1!=''){
-                    if (email1==email && password==password1){
-                        window.location.href="My_Album.html";
-                    }
-                    else{
-                        alert("邮箱或密码错误，请重新输入！");
-                    }
-                }
-                else{
-                    alert("邮箱或密码不能为空！");
-                }
-                
-            }
-        }
         </script>
     </div>
  
