--- a/src/main/resources/statis/courseDesign/login.html
+++ b/src/main/resources/statis/courseDesign/login.html
@@ -78,6 +78,7 @@
 </head>
  
 <body>
+
     
     <div id="loginDiv">
         <form action="" id="form">
@@ -97,26 +98,26 @@
             </div>
         </form>
         <script type="text/javascript" src="js/jquery.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script>
-            var username1=document.getElementById("username").value;
-            var password1=document.getElementById("password").value;
-            axios.post('/account/login', {
-                username: username1,
-                password: password1
-            })
-                .then(function(response) {
-                    // 处理返回的 JSON 数据
-                    console.log(response.data);
-
-
+            import {axios} from "./plugins/axios/axios.min";
+            function login_click() {
+                var username1 = document.getElementById("username").value;
+                var password1 = document.getElementById("password").value;
+                axios.post('./account/login', {
+                    username: username1,
+                    password: password1
                 })
-                .catch(function (error){
-                    //处理错误
-                    console.log(error)
-                })
-
+                    .then(function (response) {
+                        // 处理返回的 JSON 数据
+                        console.log(response.data);
+                    })
+                    .catch(function (error) {
+                        //处理错误
+                        console.log(error)
+                    })
+            }
             //获取注册时存储在localStorage中的值
-
         </script>
     </div>
  
