--- a/src/main/resources/statis/courseDesign/index.html
+++ b/src/main/resources/statis/courseDesign/index.html
@@ -15,7 +15,7 @@
 <div id="app">
     <el-form :inline="true" :model="form" class="demo-form-inline">
         <el-form-item label="Login">
-            <el-input v-model="form.user" placeholder="Approved by" />
+            <el-input v-model="form.username" placeholder="Approved by" />
         </el-form-item>
         <el-form-item label="PassWord">
             <el-input v-model="form.password" placeholder="Approved by" />
