--- a/src/main/resources/statis/courseDesign/index.html
+++ b/src/main/resources/statis/courseDesign/index.html
@@ -39,7 +39,7 @@
     },
     methods: {
       onSubmit() {
-        alert(this.form.user+" "+this.form.password);
+        alert(this.form.username+" "+this.form.password);
           axios.post("./account/login",
               {
               // The data to be sent as part of the request
