--- a/src/main/resources/statis/courseDesign/login.html
+++ b/src/main/resources/statis/courseDesign/login.html
@@ -91,7 +91,6 @@
                 <br>
                 <span id="password_err" style="display: none">密码输入错误</span>
             </p>
-            <p style="text-align: center;color: darkgray;"><a href="#">忘记密码?</a></p>
             <div style="text-align: center;margin-top: 30px;">
                 <input type="button" id="btn" class="button" value="登录" onclick="login_click()">
                 <input type="button" class="button" value="刷新" οnclick="window.parent.frames.item('bottom').location.reload()">
@@ -99,9 +98,9 @@
         </form>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script> import {axios} from "./plugins/axios/axios.min";</script>
         <script>
-            import {axios} from "./plugins/axios/axios.min";
-            function login_click() {
+            function login_click(){
                 var username1 = document.getElementById("username").value;
                 var password1 = document.getElementById("password").value;
                 axios.post('./account/login', {
@@ -111,12 +110,15 @@
                     .then(function (response) {
                         // 处理返回的 JSON 数据
                         console.log(response.data);
+
                     })
                     .catch(function (error) {
                         //处理错误
-                        console.log(error)
+                        alert("邮箱或密码错误，请重新输入！");
                     })
             }
+
+
             //获取注册时存储在localStorage中的值
         </script>
     </div>
