--- a/src/main/resources/statis/courseDesign/index.html
+++ b/src/main/resources/statis/courseDesign/index.html
@@ -8,7 +8,7 @@
   <!-- import JavaScript -->
   <script src="https://unpkg.com/element-plus"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <title>Element Plus demo</title>
+  <title>登录</title>
 </head>
 
 <head>
@@ -26,7 +26,7 @@
             overflow: hidden;
             margin: 0;
             padding: 0;
-            background: url(san.png) no-repeat 0px 0px;
+            background: url(images/san.png) no-repeat 0px 0px;
             background-size: 100% 100%;
             -moz-background-size: 100% 100%;
         }
