fix:优化登录页面

--- a/src/main/resources/statis/courseDesign/adminview.html
+++ b/src/main/resources/statis/courseDesign/adminview.html
@@ -130,26 +130,26 @@
                   {
                     id: '2',
                     name: '学生管理',
-                    url: 'page/studentadmin.html',
+                    url: 'pag2/stuList.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '3',
                     name: '学院管理',
-                    url: 'page/departmentadmin.html',
+                    url: 'pag2/couselist.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '4',
                     name: '课程管理',
-                    url: 'page/courseadmin.html',
+                    url: 'pag2/departmentlist.html',
                     icon: 'icon-category'
                   },
 
               //   ],
               // },
             ],
-            iframeUrl: 'page/studentadmin.html',
+            iframeUrl: 'pag2/stuList.html',
             headTitle: '学生信息查询',
             goBackFlag: false,
             loading: true,
